--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port						= 8080
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto			= none
+spring.jpa.hibernate.show-sql			= true
+spring.datasource.url					= jdbc:postgresql://localhost:5432/biblioteca
+spring.datasource.username				= postgres
+spring.datasource.password				= 123456
 
+logging.level.org.hibernate.SQL								= DEBUG
+#logging.level.org.hibernate.SQL								= INFO
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder	= INFO
+logging.level.org.hibernate.type							= INFO
